# Open1722_Can_Latency_Tester

./: .gitignore  CMakeLists.txt  prj.conf
analyzer/: allzephyr.csv  main_stream.csv  real_time_analyzer.py  summary.md
analyzer/stm32-can-monitor/: HOW_IT_WORKS.md  docker-compose.yml
analyzer/stm32-can-monitor/grafana/dashboards/: can_latency.json
analyzer/stm32-can-monitor/telegraf/: telegraf.conf
apps/main_pipeline/: AutomateInterfaceAndBridge.md  CMakeLists.txt  prj.conf
apps/main_pipeline/boards/: nucleo_f439zi_devkit.overlay
apps/main_pipeline/src/: can_handler.h  main.c  stats.c  timestamp.c  timestamp.h
apps/stm32_to_stm32/: README.md
apps/stm32_to_stm32/board2/: CMakeLists.txt  prj.conf
apps/stm32_to_stm32/board2/boards/: nucleo_f439zi.overlay
apps/stm32_to_stm32/board2/src/: avtp_handler.c  avtp_handler.h  can_handler.c  can_handler.h  main.c  net_handler.c  net_handler.h
apps/stm32_to_stm32/board3/: CMakeLists.txt  prj.conf
apps/stm32_to_stm32/board3/boards/: nucleo_f439zi.overlay
apps/stm32_to_stm32/board3/src/: avtp_handler.c  avtp_handler.h  can_handler.c  can_handler.h  main.c  (+2 more)
apps/stm32_to_stm32/main_pipeline/: README.md  prj.conf
docs/: 3sp_open1722_project.docx  3sp_open1722_project_v2.docx  _backup_3sp.md
docs/diagrams/: 01_main_pipeline.puml  02_stm32_to_stm32_full_zephyr.puml  02_stm32_to_stm32_full_zephyr_presentation.puml  03_hybrid_stm32_rpi.puml  04_wireless_link.puml  architecture.md  open1722_architecture.puml  physical_connections.md
docs/report/: Makefile  report.tex
docs/slides/: comparison_slide.html
(+12 files in other folders)
